--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "buefy": "^0.6.6",
+    "lodash": "^4.17.10",
     "router": "^1.3.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "unirest": "^0.5.1",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
